/*
Copyright 2021 The tKeel Authors.
Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

        http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/

syntax = "proto3";

package entry.v1;

option go_package = "github.com/tkeel-io/tkeel/api/entry/v1;v1";
option java_multiple_files = true;
option java_package = "dev.tkeel.rudder.api.entry.v1";
option java_outer_classname = "OpenapiProtoV1";

// @plugins=protoc-gen-go-errors
// 错误
enum Error {
  // 未知类型
  // @code=UNKNOWN
  ENTRY_ERR_UNKNOWN = 0;
  // 无效的租户 ID
  // @code=INVALID_ARGUMENT
  ENTRY_ERR_INVAILD_TENANT = 1;
  // 请求后端内部错误
  // @code=INTERNAL
  ENTRY_ERR_INTERNAL_ERROR = 2;
}